src/test/ui/issue-31221.stderr
error: unreachable pattern
  --> $DIR/issue-31221.rs:30:9
   |
30 |         Var2 => (),
   |         ^^^^ this is an unreachable pattern
   |
note: lint level defined here
  --> $DIR/issue-31221.rs:14:9
   |
14 | #![deny(unreachable_patterns)]
   |         ^^^^^^^^^^^^^^^^^^^^
note: this pattern matches any value
  --> $DIR/issue-31221.rs:28:9
   |
28 |         Var3 => (),
   |         ^^^^

error: unreachable pattern
  --> $DIR/issue-31221.rs:38:9
   |
38 |         &Var2 => (),
   |         ^^^^^ this is an unreachable pattern
   |
note: this pattern matches any value
  --> $DIR/issue-31221.rs:36:9
   |
36 |         &Var3 => (),
   |         ^^^^^

error: unreachable pattern
  --> $DIR/issue-31221.rs:47:9
   |
47 |         anything => ()
   |         ^^^^^^^^ this is an unreachable pattern
   |
note: this pattern matches any value
  --> $DIR/issue-31221.rs:45:9
   |
45 |         (c, d) => (),
   |         ^^^^^^

error: aborting due to 3 previous errors

